# dexter

./: .gitignore  MANIFEST.in  Pipfile  README.md  setup.cfg  watcher.py
docs/dexter/: mkdocs.yml
docs/dexter/docs/: index.md
docs/example/: README.md
scripts/: clone_repo.sh
src/dexter/: __init__.py  example.py  watcher.py
tests/: test_app.py  test_lib.py
tests/lib_a/: __base__.py  __init__.py  plugin_a.py  plugin_b.py
tests/lib_b/: __init__.py  plugin_a.py  plugin_b.py
