[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
# Core
name = dexter
version = 0.0.2
keywords = library module package management

# LICENSE
license_file = LICENSE.txt

# README
description = Easy libraries & modules
long_description = file: README.md
long_description_content_type = "text/markdown"

# Links
#url = https://github.com/{username}/{project}
#project_urls =
    #Documentation = https://{project_docs}.com

classifiers =
    #License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
zip_safe = false
python_requires = >=3.9

# Package
packages = find:
package_dir =
    =src

# Requires
#install_requires =
    #click >= 7.1.2


[options.packages.find]
where = src


[options.entry_points]
# <name> = [<package>.[<subpackage>.]]<module>[:<object>.<object>]
console_scripts =
    dexter-lab = dexter.example:hello_world